refactor: SonarQube 대응